syntax = "proto3";

import "com/sunya/electionguard/protogen/common.proto";
import "google/protobuf/empty.proto";

option java_package = "com.sunya.electionguard.protogen";
option java_outer_classname = "RemoteKeyCeremonyTrusteeProto";

service RemoteKeyCeremonyTrusteeService {
  rpc sendPublicKeys (PublicKeySetRequest) returns (PublicKeySet) {}
  rpc receivePublicKeys (PublicKeySet) returns (ErrorResponse) {}
  rpc sendPartialKeyBackup (PartialKeyBackupRequest) returns (PartialKeyBackup) {}
  rpc verifyPartialKeyBackup (PartialKeyBackup) returns (PartialKeyVerification) {}
  rpc sendBackupChallenge (PartialKeyChallenge) returns (PartialKeyChallengeResponse) {}
  rpc sendJointPublicKey (JointPublicKeyRequest) returns (JointPublicKeyResponse) {}
  rpc saveState (google.protobuf.Empty) returns (ErrorResponse) {}
  rpc finish (FinishRequest) returns (ErrorResponse) {}
}

message PublicKeySetRequest {
}

message PublicKeySet {
  string owner_id = 1; // the Trustee's id
  uint32 guardian_x_coordinate = 2; // the Trustee's xcoordinate
  reserved 3; // the Trustee's RSA public key
  repeated SchnorrProof coefficient_proofs = 4; // The polynomial coefficients commitments and proofs
  string error = 5; // if not empty, an error has occurred.
}

message PartialKeyBackupRequest {
  string guardian_id = 1; // the Trustee's id
}

message PartialKeyBackup {
  string generating_guardian_id = 1; // The Id of the Trustee that generated this backup.
  string designated_guardian_id = 2; // The Id of the Trustee to receive this backup.
  uint32 designated_guardian_x_coordinate = 3; // The x coefficient of the designated guardian.
  ElementModQ coordinate = 4; // The coordinate of the designated guardian.
  string error = 5; // if not empty, an error has occurred.
}

message PartialKeyVerification {
  string generating_guardian_id = 1; // The Id of the Trustee that generated this backup.
  string designated_guardian_id = 2; // The Id of the Trustee to receive this backup.
  uint32 designated_guardian_x_coordinate = 3; // The x coefficient of the designated guardian.
  string error = 4; // if not empty, an error has occurred.
}

message PartialKeyChallenge {
  string guardian_id = 1;
}

message PartialKeyChallengeResponse {
  string generating_guardian_id = 1; // The Id of the Trustee that generated this backup.
  string designated_guardian_id = 2; // The Id of the Trustee to receive this backup.
  uint32 designated_guardian_x_coordinate = 3; // The x coefficient of the designated guardian.
  ElementModQ coordinate = 4; // The unencrypted coordinate of the designated guardian.
  string error = 5; // if not empty, an error has occurred.
}

message JointPublicKeyRequest {
}

message JointPublicKeyResponse {
  ElementModP joint_public_key = 1; // non empty on error
  string error = 2; // if not empty, an error has occurred.
}
